--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Game</title>
-    <link rel="stylesheet" href="/style.css"></link>
+    <link rel="stylesheet" href="styles/style.css"></link>
     
 </head>
 <body>
@@ -36,6 +36,6 @@
         </div>
     </div>
     
-    <script src="/script.js"></script>
+    <script src="script/script.js"></script>
 </body>
 </html>
